fixing alignment of button and checkbox

--- a/css/screen.css
+++ b/css/screen.css
@@ -88,32 +88,32 @@ p a:hover {
   color: #2962FF;	
 }
 #ordertitle {
-	font-family: 'McLaren', cursive;
+  font-family: 'McLaren', cursive;
 }
 
 #formbody{
-	padding:4px;
-	margin-bottom:20px;
-	margin-top: 20px;
-	text-align: center;
+  padding:4px;
+  margin-bottom:20px;
+  margin-top: 20px;
+  text-align: center;
 }
 div {
-	margin-bottom: 10px;
-	margin-top: 15px;
+  margin-bottom: 10px;
+  margin-top: 15px;
 }
 label{
-	font-size: 1em;
-	text-align: center;
-	font-family: 'Poppins', sans-serif;
+  font-size: 1em;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
 }
 
 h3 {
-	font-size: 1.4em;
-	text-align:center;
-	margin-bottom:20px;
-	font-family: 'Poppins', sans-serif;
+  font-size: 1.4em;
+  text-align:center;
+  margin-bottom:20px;
+  font-family: 'Poppins', sans-serif;
 }
-input {
+input, #shipping, #button {
   display: inline-block;
   width: 60%;
   margin: 10px;
@@ -123,9 +123,13 @@ input {
   font-size: 1em;
 }
 #button {
-  margin:10px;
+  margin-left:250px;
+  display: center-right;
 }
-#shipping {
-	text-align: inline-block;
-	width: 20%;
+
+#shipping, #shipping2 {
+  display: center;
+  width: 5%;
+  line-height: 1.66em;
 }
+
